--- a/public/css/app.css
+++ b/public/css/app.css
@@ -33,3 +33,32 @@ select[multiple] {
     border: 1px solid #ced4da; /* Bordure standard */
     border-radius: 0.25rem; /* Coins arrondis */
 }
+
+
+/* Style spécifique à la fiche */
+.card-professionnel {
+    max-width: 40rem; /* Limite la largeur pour un meilleur rendu */
+    margin: auto; /* Centre horizontalement */
+    border-radius: 0.5rem; /* Coins légèrement arrondis */
+    box-shadow: 0 4px 6px rgba(0, 0, 0, 0.1); /* Ombre subtile */
+}
+
+.iframe-container {
+    position: relative;
+    width: auto; /* Permet à l'iframe de dépasser la largeur du conteneur parent */
+    max-width: 100%; /* Empêche l'iframe de dépasser la largeur de l'écran */
+    height: 800px; /* Ajustez la hauteur selon vos besoins */   
+    overflow: hidden; /* Masque le débordement */
+    border: 1px solid #ccc; /* Bordure autour de l'iframe */
+    border-radius: 8px; /* Coins arrondis */
+    box-shadow: 0 2px 10px rgba(0, 0, 0, 0.1); /* Ombre pour un effet de profondeur */
+
+
+.iframe-container iframe {
+    position: absolute;
+    top: 0;
+    left: 0;
+    width: 100%; /* Prend toute la largeur */
+    height: 100%; /* Prend toute la hauteur disponible dans son conteneur */
+    border: none; /* Supprime la bordure */
+}
